; ModuleID = '/home/carl/AnghaBench/linux/fs/btrfs/extr_free-space-cache.c_readahead_cache.c'
source_filename = "/home/carl/AnghaBench/linux/fs/btrfs/extr_free-space-cache.c_readahead_cache.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.file_ra_state = type { i32 }

@GFP_NOFS = common dso_local global i32 0, align 4
@PAGE_SHIFT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.inode*)* @readahead_cache to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @readahead_cache(%struct.inode* %0) #0 {
  %2 = alloca %struct.inode*, align 8
  %3 = alloca %struct.file_ra_state*, align 8
  %4 = alloca i64, align 8
  store %struct.inode* %0, %struct.inode** %2, align 8
  %5 = load i32, i32* @GFP_NOFS, align 4
  %6 = call %struct.file_ra_state* @kzalloc(i32 4, i32 %5)
  store %struct.file_ra_state* %6, %struct.file_ra_state** %3, align 8
  %7 = load %struct.file_ra_state*, %struct.file_ra_state** %3, align 8
  %8 = icmp ne %struct.file_ra_state* %7, null
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  br label %30

10:                                               ; preds = %1
  %11 = load %struct.file_ra_state*, %struct.file_ra_state** %3, align 8
  %12 = load %struct.inode*, %struct.inode** %2, align 8
  %13 = getelementptr inbounds %struct.inode, %struct.inode* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @file_ra_state_init(%struct.file_ra_state* %11, i32 %14)
  %16 = load %struct.inode*, %struct.inode** %2, align 8
  %17 = call i32 @i_size_read(%struct.inode* %16)
  %18 = sub nsw i32 %17, 1
  %19 = load i32, i32* @PAGE_SHIFT, align 4
  %20 = ashr i32 %18, %19
  %21 = sext i32 %20 to i64
  store i64 %21, i64* %4, align 8
  %22 = load %struct.inode*, %struct.inode** %2, align 8
  %23 = getelementptr inbounds %struct.inode, %struct.inode* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load %struct.file_ra_state*, %struct.file_ra_state** %3, align 8
  %26 = load i64, i64* %4, align 8
  %27 = call i32 @page_cache_sync_readahead(i32 %24, %struct.file_ra_state* %25, i32* null, i32 0, i64 %26)
  %28 = load %struct.file_ra_state*, %struct.file_ra_state** %3, align 8
  %29 = call i32 @kfree(%struct.file_ra_state* %28)
  br label %30

30:                                               ; preds = %10, %9
  ret void
}

declare dso_local %struct.file_ra_state* @kzalloc(i32, i32) #1

declare dso_local i32 @file_ra_state_init(%struct.file_ra_state*, i32) #1

declare dso_local i32 @i_size_read(%struct.inode*) #1

declare dso_local i32 @page_cache_sync_readahead(i32, %struct.file_ra_state*, i32*, i32, i64) #1

declare dso_local i32 @kfree(%struct.file_ra_state*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
